--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "vuepress build deploy.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vuepress": "^1.9.10",
-    "vuepress-theme-vdoing": "^1.12.9"
+    "vuepress": "^1.9.10"
   }
 }
