--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          npm run build
+          # 进入生成的文件夹
+          cd docs/.vuepress/dist
+          git init			
+          git add -A
+          git commit -m 'master'
+          git push -f git@github.com:lpw94/lpw94.github.io.git master
