--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,32 +9,21 @@ jobs:
    build-and-deploy:
       runs-on: ubuntu-latest
       steps:
-      # 使用某个 Repo
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '12.18.3'
-          cache: 'npm'
-
-      # 构建静态文件
-      - name: Install and Build
-        run: |
-          npm install yarn
-          node -v
-          yarn -v
-          npm -v
-          yarn
-          yarn build
-      # 部署到 GitHub Pages
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: docs/.vuepress/dist
-          external_repository: lpw94/lpw94.github.io
-          publish_branch: master
-          cname: woge
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+        - uses: actions/checkout@v4
+        - name: Use Node.js
+          uses: actions/setup-node@v3
+          with:
+            node-version: '12.18.3'
+        - run: npm install
+        - run: npm run build
+        # 部署到 GitHub Pages
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            personal_token: ${{ secrets.PERSONAL_TOKEN }}
+            publish_dir: docs/.vuepress/dist
+            external_repository: lpw94/lpw94.github.io
+            publish_branch: master
+            cname: woge
+            user_name: 'github-actions[bot]'
+            user_email: 'github-actions[bot]@users.noreply.github.com'
