--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,9 +15,12 @@ jobs:
           with:
             node-version: '12.18.3'
         - run: npm install
+        - run: node -v
         - run: npm run build
         - run: cd docs/.vuepress/dist
-        - run: git init			
+        - run: git init
+        - run: git config --global user.email "lpw94@qq.com"
+        - run: git config --global user.name "lpw94"
         - run: git add -A
         - run: git commit -m 'master'
         - run: git push -f git@github.com:lpw94/lpw94.github.io.git master
