--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,10 +17,23 @@ jobs:
         - run: npm install
         - run: node -v
         - run: npm run build
-        - run: cd docs/.vuepress/dist
-        - run: git init
-        - run: git config --global user.email "lpw94@qq.com"
-        - run: git config --global user.name "lpw94"
-        - run: git add -A
-        - run: git commit -m 'master'
-        - run: git push -f git@github.com:lpw94/lpw94.github.io.git master
+
+        # 部署到 GitHub Pages
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            personal_token: ${{ secrets.PERSONAL_TOKEN }}
+            publish_dir: docs/.vuepress/dist
+            external_repository: lpw94/lpw94.github.io
+            publish_branch: main
+            cname: woge
+            user_name: 'github-actions[bot]'
+            user_email: 'github-actions[bot]@lpw94.github.com'
+
+        #- run: cd docs/.vuepress/dist
+        #- run: git init
+        #- run: git config --global user.email "lpw94@qq.com"
+        #- run: git config --global user.name "lpw94"
+        #- run: git add -A
+        #- run: git commit -m 'master'
+        #- run: git push -f git@github.com:lpw94/lpw94.github.io.git master
